30/1/12 started 7.28.0
- version bump
- added vips_foreign_find_save_options()/vips_foreign_find_load_options()
- delayed write to foreign via a "w" image was not working
- support operations with many returns in Python
- sequential read mode 
- better im_shrink()

20/8/11 started 7.27.0
- version bump for new dev cycle
- im_subtract(), im_avg(), im_min(), im_minpos(), im_copy(), im_embed(),
  im_flophor(), im_flipver(), im_insert(), im_insert_noexpand(), im_lrjoin(),
  im_tbjoin(), im_extract_area(), im_extract_bands(), im_extract_areabands(),
  im_replicate(), im_clip2fmt(), im_gbandjoin(), im_bandjoin(), im_invert(),
  im_lintra(), im_lintra_vec(), im_black(), im_rot90, im_rot180(), im_rot270()
  im_sintra(), im_costra(), im_tantra(), im_asintra(), im_acostra(), 
  im_atantra(), im_exptra(), im_exp10tra(), im_logtra(), im_log10tra(),
  im_abs(), im_sign(), im_max(), im_maxpos(), im_deviate(), im_divide(),
  im_multiply(), im_stats(), im_measure(), im_recomb(), im_floor(), im_ceil(),
  im_rint(), im_equal*(), im_notequal*(), im_less*(), im_lesseq*(), im_more*(),
  im_moreeq*(), im_remainder*(), im_and*(), im_or*(), im_eor*(), im_shift*(),
  im_pow*(), im_exp*(), im_ifthenelse(), im_blend(), im_c2amph(), im_c2rect(),
  im_bandmean(), im_c2real(), im_c2imag(), im_ri2c(), im_jpeg*2vips(), 
  im_vips2jpeg*(), im_tiff2vips(), im_vips2tiff(), im_exr2vips(),
  im_fits2vips(), im_vips2fits(), im_analyze2vips(), im_raw2vips(),
  im_vips2raw(), im_magick2vips(), im_png2vips(), im_png2*(), im_ppm2vips(),
  im_vips2ppm(), im_mat2vips(), im_rad2vips(), im_vips2rad()
  redone as classes
- added argument priorites to help control arg ordering
- generate has a 'stop' param to signal successful early termination
- added optional output args, eg. x/y for min
- CLI supports optional output args
- in im_vips2tiff, enable YCbCr compression for jpeg write
- VipsMin stops search early if it can
- C API supports optional output args
- switch back to int-valued operations