@@ -105,6 +105,7 @@ vips_conversion_operation_init( void )
 {
 	extern GType vips_copy_get_type( void ); 
 	extern GType vips_tile_cache_get_type( void ); 
+	extern GType vips_sequential_get_type( void ); 
 	extern GType vips_cache_get_type( void ); 
 	extern GType vips_embed_get_type( void ); 
 	extern GType vips_flip_get_type( void ); 
@@ -123,6 +124,7 @@ vips_conversion_operation_init( void )
 
 	vips_copy_get_type();
 	vips_tile_cache_get_type(); 
+	vips_sequential_get_type(); 
 	vips_cache_get_type(); 
 	vips_embed_get_type();
 	vips_flip_get_type();
@@ -139,7 +141,6 @@ vips_conversion_operation_init( void )
 	vips_recomb_get_type(); 
 	vips_bandmean_get_type(); 
 }
-
 
 /* The common part of most binary conversion
  * operators. We:
