@@ -139,6 +139,8 @@ int vips_copy( VipsImage *in, VipsImage **out, ... )
 	__attribute__((sentinel));
 int vips_tilecache( VipsImage *in, VipsImage **out, ... )
 	__attribute__((sentinel));
+int vips_sequential( VipsImage *in, VipsImage **out, ... )
+	__attribute__((sentinel));
 int vips_cache( VipsImage *in, VipsImage **out, ... )
 	__attribute__((sentinel));
 
